# the-unfinished

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py  models.py  prompts.py
backend/app/fixtures/: mock_analysis.py
backend/app/routes/: autopsy.py  pattern.py  projects.py  reentry.py
backend/app/services/: claude.py  file_parsers.py  gutendex.py  storage.py  text_analysis.py
backend/tests/: test_text_analysis.py
graveyard/: project1_short_story.txt  project2_blog_post.txt  project3_screenplay.txt
src/: App.tsx  index.css
src/components/: BareButton.tsx  LeftRail.tsx  Overline.tsx  Wordmark.tsx
src/data/: mockProjects.ts
src/lib/: api.ts
src/pages/: Autopsy.tsx  Landing.tsx  Library.tsx  Pattern.tsx  Reentry.tsx  Upload.tsx
